force-app/main/default/objects/CPQ_History__c/CPQ_History__c.object-meta.xml
<CustomObject>
    <label>CPQ History</label>
    <nameField>
        <displayFormat>CPQ_His-{00000}</displayFormat>
        <label>CPQ History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>