force-app/main/default/objects/CPQ_History__c/fields/Custom_Script__c.field-meta.xml
<CustomField>
    <fullName>Custom_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Custom Script</description>
    <label>Custom Script</label>
    <referenceTo>SBQQ__CustomScript__c</referenceTo>
    <relationshipLabel>QCP History</relationshipLabel>
    <relationshipName>CPQ_CustomScriptHistory</relationshipName>
    <type>Lookup</type>
</CustomField>