force-app/main/default/objects/CPQ_History__c/fields/CustomScript_Code__c.field-meta.xml
<CustomField>
    <fullName>CustomScript_Code__c</fullName>
    <description>Backup of QCP Custom Script</description>
    <label>Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>