force-app/main/default/objects/CPQ_History__c/fields/CustomScript_GroupFields__c.field-meta.xml
<CustomField>
    <fullName>CustomScript_GroupFields__c</fullName>
    <label>QuoteLine Group Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>