force-app/main/default/objects/CPQ_History__c/fields/CustomScript_QuoteFields__c.field-meta.xml
<CustomField>
    <fullName>CustomScript_QuoteFields__c</fullName>
    <label>Quote Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>