force-app/main/default/objects/CPQ_History__c/fields/CustomScript_QuoteLineFields__c.field-meta.xml
<CustomField>
    <fullName>CustomScript_QuoteLineFields__c</fullName>
    <label>QuoteLine Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>