force-app/main/default/objects/CPQ_History__c/fields/CustomScript_TranspiledCode__c.field-meta.xml
<CustomField>
    <fullName>CustomScript_TranspiledCode__c</fullName>
    <label>TranspiledCode</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>